# hypercollider-vst3

./: .gitignore  CMakeLists.txt  Justfile  README.md
.github/workflows/: plugin-build.yml
cmake/: EmbedWasm.cmake  EmbedWasmRun.cmake
docs/: BUILD_FAIL_NOTES.md  HC_PLUGIN_PLAN.md
presets/factory/: FMBass.json  Init.json  SineTone.json
src/clap/: CMakeLists.txt  Info.plist  clap_audio_ports.cpp  clap_audio_ports.h  clap_entry.cpp  clap_params.cpp  clap_params.h  clap_plugin.cpp  clap_plugin.h  clap_state.cpp  clap_state.h
src/core/: hclang_engine.cpp  hclang_engine.h  preset_manager.cpp  preset_manager.h  wasm_host.cpp  wasm_host.h
src/plugin/: controller.cpp  controller.h  entry.cpp  ids.h  processor.cpp  processor.h  version.h
src/ui/: editor_core.cpp  editor_core.h  editor_parameter_access.h  imgui_editor.h  imgui_editor_linux.cpp  imgui_editor_mac.mm  imgui_editor_win32.cpp  imgui_style.h  syntax_highlight.h
